# matching-game-gen

./: AGENTS.md  Cargo.toml  Dioxus.toml  README.md  STRUCTURE.md
src/: api.rs  components.rs  lib.rs  main.rs  models.rs  server.rs
src/routes/: home.rs  mod.rs
