[package]
name = "my_dioxus_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Core UI Framework (2026 Stable)
dioxus = { version = "0.7.3", features = ["fullstack", "router"] }
dioxus-fullstack = "0.7.3"
dioxus-server = "0.7.3"

# Data Serialization (Crucial for Server Functions)
serde = { version = "1.0", features = ["derive"] }

# Backend Web Server Integration
# Dioxus handles the glue, but Axum is the engine.
axum = { version = "0.8.0", optional = true }
tokio = { version = "1.40", features = ["full", "macros"], optional = true }

# Database (Compile-time safety for your SQL)
# Features match common 2026 requirements
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "macros", 
    "chrono", 
    "uuid"
], optional = true }

# Shared Utilities
tracing = "0.1"
log = "0.4"
rand = { version = "0.8", optional = true }
futures-timer = "3.0"

[features]
default = ["web"]
# The 'web' feature: Compiled for the browser (Wasm)
web = ["dioxus/web"]
# The 'server' feature: Compiled for the binary (Axum + SQLx)
server = [
    "dep:axum",
    "dep:tokio",
    "dep:sqlx",
    "dep:rand"
]

[profile.release]
# Optimize for small Wasm binaries
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
